[build-system]
requires = ["setuptools>=80", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "nodus-channels"
version = "0.1.0"
description = "Multi-channel messaging protocol and core types: Message, Peer, ChannelAdapter, HealthMonitor"
requires-python = ">=3.11"
license = "MIT"
authors = [{ name = "Masterplanner25" }]
dependencies = []

[project.optional-dependencies]
test = ["pytest>=8.0", "pytest-asyncio>=0.21"]

[tool.setuptools.packages.find]
where = ["."]
include = ["nodus_channels*"]